[tool.poetry]
name = "nyt-connections-solver"
version = "0.1.0"
description = "A machine learning agent for NYT Connections."
authors = ["Will Blanton"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = ">=2.3.0,<3.0.0"
scikit-learn = ">=1.7.0,<2.0.0"
gensim = ">=4.3.3,<5.0.0"
jupyter = ">=1.1.1,<2.0.0"
notebook = ">=7.4.4,<8.0.0"
sentence-transformers = ">=5.1.1,<6.0.0"

# Choose ONE of the groups below at install time
pytorchltr = "0.1.0"
tensorboardx = "^2.6.4"
selenium = "^4.36.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# CUDA wheels source (used only if you enable the cuda group)
[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

# ---- Optional dependency groups for different machines ----

# For your Linux/Windows desktop with CUDA 12.6
[tool.poetry.group.cuda.dependencies]
torch = { version = ">=2.7.1,<3.0.0", source = "pytorch_cuda" }
torchvision = { version = ">=0.22.1,<0.23.0", source = "pytorch_cuda" }
torchaudio = { version = ">=2.7.1,<3.0.0", source = "pytorch_cuda" }

[tool.poetry.group.macos.dependencies]
torch = ">=2.4.0,<3.0.0"
torchvision = ">=0.19.0,<0.23.0"
torchaudio = ">=2.4.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
tensorboard = "^2.20.0"

